--- a/index.html
+++ b/index.html
@@ -1,49 +1,51 @@
 <html>
 	<head>
-		<title>Example</title>
+		<title>VicEditor</title>
 		<meta charset = "utf-8">
-		<link rel = "stylesheet" type = "text/css" href = "editor.css" />
+		<link rel = "stylesheet" type = "text/css" href = "css/viceditor.css" />
 		<link href="extensions/fontawesome/css/font-awesome.min.css" rel="stylesheet" />
+		<link href="extensions/google-code-prettify/prettify.css" type="text/css" rel="stylesheet" />
 		<!--[if IE]>
 		<link href="extensions/fontawesome/css/font-awesome-ie7.min.css" rel="stylesheet" />
 		<![endif]-->
-		<script language = "javascript" type = "text/javascript" src = "extensions/showdown/showdown.js"></script>
-		<script language = "javascript" type = "text/javascript" src = "extensions/showdown/extensions/twitter.js"></script>
-		<script language = "javascript" type = "text/javascript" src = "editor.js"></script>
+		<script type = "text/javascript" src = "extensions/showdown/showdown.js"></script>
+		<script type = "text/javascript" src = "extensions/showdown/extensions/twitter.js"></script>
+		<script type = "text/javascript" src = "extensions/google-code-prettify/prettify.js"></script>
+		<script type = "text/javascript" src = "js/viceditor.js"></script>
 	</head>
-	<body>
+	<body onload = "prettyPrint()">
 		<h2>Markdown Editor</h2>
-		<div id = "editor">
-			<div id = "menu">
+		<div id = "viceditor">
+			<div id = "vicmenubar">
 				 <!-- 文本修饰 -->
-				<div class = "buttonbox">
+				<div class = "vicbuttonbox">
 					<span title = "H2"><i class = "fa fa-header">2</i></span>
 					<span title = "H3"><i class = "fa fa-header">3</i></span>
 					<span title = "H4"><i class = "fa fa-header">4</i></span>
 					<span title = "H5"><i class = "fa fa-header">5</i></span>
 				</div>
-				<div class = "buttonbox">
+				<div class = "vicbuttonbox">
 					<span title = "一级强调"><i class = "fa fa-italic"></i></span>
 					<span title = "二级强调"><i class = "fa fa-bold"></i></span>
 					<span title = "超链接"><i class = "fa fa-link"></i></span>
 				</div>
-				<div class = "buttonbox">
+				<div class = "vicbuttonbox">
 					<span title = "无序列表"><i class = "fa fa-list-ul"></i></span>
 					<span title = "有序列表"><i class = "fa fa-list-ol"></i></span>
 					<span title = "引用"><i class = "fa fa-quote-left"></i></span>
 					<span title = "代码块"><i class = "fa fa-code"></i></span>
 				</div>
-				<div class = "buttonbox">
+				<div class = "vicbuttonbox">
 					<span title = "插入横线"><i class = "fa fa-minus"></i></span>
 					<span title = "插入图片"><i class = "fa fa-picture-o"></i></span>
 				</div>
-				<div class = "buttonbox">
+				<div class = "vicbuttonbox">
 					<span title = "撤销"><i class = "fa fa-undo"></i></span>
 					<span title = "重做"><i class = "fa fa-rotate-right"></i></span>
 				</div>
 			</div>
-			<textarea id = "textarea"></textarea>
-			<p id = "console">Hello World !!!</p>
+			<textarea id = "vicinputarea" tabindex='0'></textarea>
+			<p id = "vicstatusbar">Hello World !!!</p>
 		</div>
 
 		<div>
