Bold check, Italic check, Link check, Title check. but in a bad way.

--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
 			<div id = "vicmenubar">
 				 <!-- 文本修饰 -->
 				<div class = "vicbuttonbox">
-					<span title = "H2"><i class = "fa fa-header">2</i></span>
+					<span id = 'vich1' title = "H2"><i class = "fa fa-header">2</i></span>
 					<span title = "H3"><i class = "fa fa-header">3</i></span>
 					<span title = "H4"><i class = "fa fa-header">4</i></span>
 					<span title = "H5"><i class = "fa fa-header">5</i></span>
 				</div>
 				<div class = "vicbuttonbox">
-					<span title = "一级强调"><i class = "fa fa-italic"></i></span>
-					<span title = "二级强调"><i class = "fa fa-bold"></i></span>
-					<span title = "超链接"><i class = "fa fa-link"></i></span>
+					<span title = "bold"><i class = "fa fa-italic"></i></span>
+					<span title = "italic"><i class = "fa fa-bold"></i></span>
+					<span title = "link"><i class = "fa fa-link"></i></span>
 				</div>
 				<div class = "vicbuttonbox">
 					<span title = "无序列表"><i class = "fa fa-list-ul"></i></span>
@@ -54,6 +54,6 @@
 		</div>
 
 		<br />
-		<textarea id = "exportresult" style = "width:500pt;height:20em;"></textarea>
+		<textarea id = "exportresult" style = "width:510pt;height:20em;"></textarea>
 	</body>
 </html>
